--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
     max-width: 250px;
     padding: 10px;
     border: 1px solid   rgb(128, 128, 128);
-    margin-bottom: 20px;  
+    margin: 0 auto 20px auto;
 }
 .search__form {
     display: flex;
